playbook/roles/clickhouse/templates/qryn/qryn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: data-gateway
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: data-gateway.onwalk.net
    http:
      paths:
      - backend:
          service:
            name: qryn
            port:
              number: 3100
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - data-gateway.onwalk.net
    secretName: obs-tls
